restructure the project (#101)
